[gd_scene load_steps=5 format=3 uid="uid://bki6rumx0on4"]

[ext_resource type="Texture2D" uid="uid://c78soe18dsop1" path="res://sprites/pebble.png" id="1_jhuyv"]
[ext_resource type="Script" path="res://Scenes/entity scenes/pebble.gd" id="1_sa0uf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_phyou"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hmbxm"]

[node name="Pebble" type="Area2D"]
script = ExtResource("1_sa0uf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_jhuyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_phyou")

[node name="pebble_hitbox" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="pebble_hitbox"]
shape = SubResource("CircleShape2D_hmbxm")

[node name="Gravity" type="Timer" parent="."]
wait_time = 0.05

[node name="Gravity_start" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="body_entered" from="pebble_hitbox" to="." method="_on_pebble_hitbox_body_entered"]
[connection signal="timeout" from="Gravity" to="." method="_on_gravity_timeout"]
[connection signal="timeout" from="Gravity_start" to="." method="_on_gravity_start_timeout"]
